[workspace]
members = ["ark-core", "ark-server", "ark-client"]
resolver = "2"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec", "io"] }

# Cryptography — secp256k1 (shared by BIP 324 and RLPx)
secp256k1 = { version = "0.29", features = ["global-context", "rand", "recovery"] }

# BIP 324 session cipher
chacha20poly1305 = "0.10"
chacha20 = "0.9"

# RLPx frame cipher
aes = "0.8"
ctr = "0.9"

# Key derivation
hkdf = "0.12"
sha2 = "0.10"
sha3 = "0.10"     # Keccak256 for RLPx MAC

# HMAC (RLPx ECIES auth tag)
hmac = "0.12"

# Error handling
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# UUID for session markers
uuid = { version = "1", features = ["v4"] }

# Random bytes
rand = "0.8"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
toml = "0.8"
serde_json = "1"

# Pool registry signing (Phase 12 / WP3)
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }
hex = "0.4"

# HTTP client for pool registry fetch (Phase 12 / WP3)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

# Platform cache directory (Phase 12 / WP3)
dirs = "5"

[workspace.package]
version = "0.1.9"
edition = "2021"
rust-version = "1.75"
license = "MIT OR Apache-2.0"
