[package]
name = "ark-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ark-core           = { path = "../ark-core" }
tokio              = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
uuid               = { workspace = true }
clap               = { workspace = true }
serde              = { workspace = true }
serde_json         = { workspace = true }
ed25519-dalek      = { workspace = true }
hex                = { workspace = true }
reqwest            = { workspace = true }
dirs               = { workspace = true }
