[package]
name = "ark-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio        = { workspace = true }
tokio-util   = { workspace = true }
secp256k1    = { workspace = true }
chacha20poly1305 = { workspace = true }
chacha20     = { workspace = true }
aes          = { workspace = true }
ctr          = { workspace = true }
hkdf         = { workspace = true }
sha2         = { workspace = true }
sha3         = { workspace = true }
hmac         = { workspace = true }
anyhow       = { workspace = true }
tracing      = { workspace = true }
uuid         = { workspace = true }
rand         = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
